deployment/battlefortronia.yml
apiVersion: v1
kind: Service
metadata:
  name: battlefortronia-service
spec:
  selector:
    app: battlefortronia
  type: NodePort
  sessionAffinity: ClientIP
  ports:
    - name: http
      port: 80
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: battlefortronia-deployment
  labels:
    app: battlefortronia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: battlefortronia
  template:
    metadata:
      labels:
        app: battlefortronia
    spec:
      containers:
        - name: battlefortronia
          image: gcr.io/easytrade-00001/battlefortronia
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
